# Xenium_Analysis

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_README.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  README.md  config.ini  environment.yml  installed.yml  pyproject.toml  requirements-ci.txt  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
data/phenocycler/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
figures/legacy/: README.md
notebooks/: 00_ingest_xenium.ipynb  01_preprocessing.ipynb  01_preprocessing_v2.ipynb  01_preprocessing_v2.ipynb.bak.preEpsilonFix  02_phenotyping.ipynb  02_phenotyping.ipynb.bak.preEpsilonFix  02_phenotyping.ipynb.bak.prelineage  02_phenotyping.ipynb.bak.preplanB  03_spatial_analysis.ipynb  04_group_comparisons.ipynb  05_tissue_comparisons.ipynb  06_xenium_phenocycler_integration.ipynb  07_immune_islet_proximity.ipynb  gene_names.txt
notebooks/legacy/: README.md
scripts/: audit_dropped_genes.py  audit_panel_exclusions.py  build_notebook_07.py  compare_islet_seeds.py  edit_notebook_04_subsample.py  env_rapids.sh  export_xenium_explorer_groups.py  figs_07_immune.py  figs_07_immune_rerun.py  finalize_panel.py  fix_acinar_argmax.py  fix_deg_comprehensive.py  fix_preprocessing_params.py  fix_volcano_lfc.py  insulitis_analysis.py  islet_proximity_endolabel.py  jupyter_kernel_launch.sh  lineage_phenotype.py  patch_notebooks_for_reanalysis.py  probe_islet_correct.py  probe_islet_dbscan.py  probe_islet_strict.py  probe_scanpy_dotplot_axes.py  probe_spatial_scale.py  qc_high_var_check.py  refactor_preprocessing_pipeline.py  refine_rare_celltypes.py  regate_immune.py  regen_cluster_consensus_umap.py  regen_co_occurrence.py  regen_ligrec_dotplot.py  regen_ligrec_lineage.py  regen_marker_separators.py  regen_qc_plots.py  regen_umap_overlays.py  render_immune_figs.py  rerender_co_occurrence.py  rerender_ligrec_dotplot.py  rerender_niche_celltype_matrix.py  rerender_spatial_domains.py  (+14 more)
scripts/R/: xenium_analysis.R
scripts/legacy/: README.md  finalize_03_niche.py  fix_umap_pacmap.py  (+6 more)
tests/: conftest.py  test_deg_fixes.py  test_preprocessing_refactor.py  test_repo_health.py  test_xenium_explorer_export.py
utils/: __init__.py  analysis_utils.py  xenium_explorer_export.py
(+11 files in other folders)
